# Veluxia

./: .gitignore  LICENSE  Plan.md  ReadMe.md  models.json  pyproject.toml
.github/workflows/: build.yml
resource/: resource.qrc  translate.pro
resource/qss/: input_bar.qss  message_bar.qss  resource.qss  setting.qss
script/: build_pro.bat  build_qrc.bat  convert_flux_to_diffusers.py
src/: main.py  resources.py
src/app/: client.py  param.py  work.py
src/app/ui/: gen_page.py  model_comb.py  window.py  window_data.py
src/app/ui/base/: action_button.py  widget.py
src/app/ui/chat/: chat_session_manager.py  chat_widget.py
src/app/ui/input/: input_bar.py  slide_stack.py
src/app/ui/message/: content_factory.py  message_bubble.py  message_widgets.py  think_bubble.py
src/app/ui/message/text/: code_block_widget.py  markdown_widget.py  streaming_renderer.py  text_block_widget.py
src/app/ui/param/: panel_base.py  param_drawer.py  param_factory.py
src/app/ui/param/core/animation/: ltx_video_panel.py  wan2_video_panel.py
src/app/ui/param/core/image/: flux_schnell_panel.py
src/app/ui/param/core/image_frame/: film_interpolation_panel.py
src/app/ui/param/core/speech/: ace_step_panel.py  qwen3_tts_panel.py
src/app/ui/param/core/text/: llama_chat_panel.py
src/app/ui/setting/: setting.py
src/app/ui/setting/page/: about_page.py  gpu_page.py  log_page.py  model_page.py  translation_page.py
src/backend/: router_base.py  server.py  system.py
src/backend/core/: model_base.py  model_utils.py  preloader.py  translate_pipeline.py
src/backend/core/animation/: ltx_video.py  wan2_2.py
src/backend/core/image/: flux_schnell.py
src/backend/core/image_frame/: film_generator.py
src/backend/core/speech/: ace_step_music.py  qwen3_tts.py
src/backend/core/text/: index_memory.py  llama_chat.py
src/backend/router/: animation.py  image.py  speech.py  text.py  translate.py
src/shared/: enum_type.py  schemas.py  settings.py
